// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a sortable table 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -31,11 +31,13 @@
            colspan="1"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            First Name
-           <span />
+           <span>
+              🔼
+           </span>
          </th>
          <th
            class=""
            colspan="1"
            style="cursor: pointer;"
@@ -89,104 +91,104 @@
          class=""
        >
          <td
            class=""
          >
-           firstName: tanner
+           firstName: derek
          </td>
          <td
            class=""
          >
-           lastName: linsley
+           lastName: perkins
          </td>
          <td
            class=""
          >
-           age: 29
+           age: 40
          </td>
          <td
            class=""
          >
-           visits: 100
+           visits: 40
          </td>
          <td
            class=""
          >
-           status: In Relationship
+           status: Single
          </td>
          <td
            class=""
          >
-           progress: 50
+           progress: 80
          </td>
        </tr>
        <tr
          class=""
        >
          <td
            class=""
          >
-           firstName: derek
+           firstName: joe
          </td>
          <td
            class=""
          >
-           lastName: perkins
+           lastName: bergevin
          </td>
          <td
            class=""
          >
-           age: 40
+           age: 45
          </td>
          <td
            class=""
          >
-           visits: 40
+           visits: 20
          </td>
          <td
            class=""
          >
-           status: Single
+           status: Complicated
          </td>
          <td
            class=""
          >
-           progress: 80
+           progress: 10
          </td>
        </tr>
        <tr
          class=""
        >
          <td
            class=""
          >
-           firstName: joe
+           firstName: tanner
          </td>
          <td
            class=""
          >
-           lastName: bergevin
+           lastName: linsley
          </td>
          <td
            class=""
          >
-           age: 45
+           age: 29
          </td>
          <td
            class=""
          >
-           visits: 20
+           visits: 100
          </td>
          <td
            class=""
          >
-           status: Complicated
+           status: In Relationship
          </td>
          <td
            class=""
          >
-           progress: 10
+           progress: 50
          </td>
        </tr>
      </tbody>
    </table>
  </DocumentFragment>
`;

exports[`renders a sortable table 2`] = `
Snapshot Diff:
- First value
+ Second value

@@ -32,11 +32,11 @@
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            First Name
            <span>
-              🔼
+              🔽
            </span>
          </th>
          <th
            class=""
            colspan="1"
@@ -91,36 +91,36 @@
          class=""
        >
          <td
            class=""
          >
-           firstName: derek
+           firstName: tanner
          </td>
          <td
            class=""
          >
-           lastName: perkins
+           lastName: linsley
          </td>
          <td
            class=""
          >
-           age: 40
+           age: 29
          </td>
          <td
            class=""
          >
-           visits: 40
+           visits: 100
          </td>
          <td
            class=""
          >
-           status: Single
+           status: In Relationship
          </td>
          <td
            class=""
          >
-           progress: 80
+           progress: 50
          </td>
        </tr>
        <tr
          class=""
        >
@@ -159,36 +159,36 @@
          class=""
        >
          <td
            class=""
          >
-           firstName: tanner
+           firstName: derek
          </td>
          <td
            class=""
          >
-           lastName: linsley
+           lastName: perkins
          </td>
          <td
            class=""
          >
-           age: 29
+           age: 40
          </td>
          <td
            class=""
          >
-           visits: 100
+           visits: 40
          </td>
          <td
            class=""
          >
-           status: In Relationship
+           status: Single
          </td>
          <td
            class=""
          >
-           progress: 50
+           progress: 80
          </td>
        </tr>
      </tbody>
    </table>
  </DocumentFragment>
`;
